# StockMarketTool

./: .gitignore  Analysis.py  DoltReader.py  FeatureEngine.py  FeatureEngine_orig.py  Features.py  LICENSE  README.md  adjust_all_data_for_splits.py  clean_analysis.py  clean_tests.py  dolt_query.py  get_data_from_stock_finder.py  get_data_v3.py  get_data_v4.py  get_data_volume_hurst.py  info1.csv  lgbm_v2.py  lgbm_v3.py  lgbm_v4.py  lgbm_v5.py  lgbm_v6.py  lgbm_v7.py  modify_data.py  portfolio_picks.py  portfolio_picks_v2.py  portfolio_picks_v3.py  pyproject.toml  sim_strat1.py  simple_lgbm_run.py  stock_finder.py  tests.py  ~$BTC_trade.xlsx
Data/: ADYEY.csv  AI.csv  AMC.csv  AMZN.csv  AZNCF.csv  BA.csv  BB.csv  BLOCK.csv  BNDW.csv  F.csv  GM.csv  GOOGL.csv  GPN.csv  GRAB.csv  JNJ.csv  KDP.csv  KO.csv  MRK.csv  MSTR.csv  NVS.csv  PEP.csv  PFE.csv  PYPL.csv  RHHBY.csv  RIVN.csv  ROBO.csv  SCHD.csv  SHOP.csv  SPLITS.csv  SPY.csv  STLA.csv  TSLA.csv  VIXCLS.csv  lgbm_model.txt  {save_name}.txt
Data/Universes/: README.txt
Data/models_v6/: model_seed_0.txt  model_seed_1.txt  model_seed_2.txt  model_seed_3.txt  model_seed_4.txt
DataRetrieval/: get_todays_data.py  setup_data.py  setup_data2.py
scripts/: Analysis.py  DoltReader.py  FeatureEngine.py  NASDAQ_Data.py  clean_analysis.py
tests/: clean_tests.py  new_feature_test.py  test_dolt_databases.py  test_features.py  tests.py
tools/: dolt_query.py  morning_data_reader.py  show_talib_timeperiod_funcs.py
